# sslyze-report

./: .gitignore  README.md  app.py  config.ini.example  create_db.sql  db_migraton.bash  doit.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  scan.py  vue.config.js
client/: package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: CertificateView.vue  Certificates.vue  CertificatesList.vue  CompHostsList.vue  HostView.vue  HostsList.vue  MenuHeader.vue  Ping.vue  datatable.vue
client/src/router/: index.js
client/src/views/: CertificateView.vue  CertificatesList.vue  HostView.vue  HostsList.vue  Ping.vue
db_migration/: migration_db_1.sql  migration_db_2.sql  migration_db_3.sql  migration_db_4.sql  migration_db_5.sql
src/: main.js
src/components/: Ping.vue
src/router/: index.js
tools/: convert_nmap_to_hostlist.pl  manual_sslyze_init.py  reports.sh  sslyze_mozilla_reassessment.py  sslyze_reassessment.py  update_last_scan.sql
utils/: CertAnalyser.py  HostAnalyser.py  MozillaTlsChecker.py  ScanError.py  TlsAnalyser.py
