[tool.poetry]
name = "sslyze-report"
version = "0.1.0"
description = ""
authors = ["mfutech <mfutech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sslyze = "^6.2.0"
Flask = "^3.1.2"
flask-cors = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
