[project]
name = "sslyze-report"
version = "0.1.0"
description = ""
authors = [{ name = "mfutech", email = "mfutech@users.noreply.github.com" }]
requires-python = "~=3.10.0"
dependencies = [
    "sslyze>=6.2.0,<7",
    "Flask>=3.1.2,<4",
    "flask-cors>=6.0.1,<7",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
